# trashcan

./: README.md
C++/OLCrayCaster/: README.md  makefile  rayCaster.cpp
C++/Scavenger/: main.cpp  makefile
C++/coconut/: README.md  main.cpp  makefile
C++/gravlax/: README.md  main.cpp  makefile
C++/karhu/: README.md  main.cpp  makefile
C++/karhu/shaders/: color.frag  default.frag  fire.glsl  glow.frag  transparent.frag
C++/oldgameengine/: LICENSE  README.md  SDLEngine.cpp  SDLEngine.sln  SDLEngine.vcxproj  SDLEngine.vcxproj.filters  makefile
C++/raycastersfml/: LICENSE  README.md  main.cpp  makefile
C/MemTest/: README.md  main.c  makefile  random.txt  random2.txt
C/SDLGameEngine/: main.c  makefile
GLSL/: test.frag
Javascript/ShipLights/: LICENSE  README.md  index.html  sailboat.stl  style.css
Javascript/ShipLights/js/: script.js
Python/Scavenger/: LICENSE  README.md  Scavenger.py  code-disclaimer.txt  game2020.py
Python/pidigits/: main.py  million-pi-digits.txt
Rust/testing/: Cargo.toml  README.md
Rust/testing/src/: main.rs
